kustomize/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "dev-config-default"}'
