kustomize/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dev-sandbox
    networking.gke.io/managed-certificates: dev-sandbox
    kubernetes.io/ingress.class: gce
